# depthai_hand_tracker

./: CMakeLists.txt  package.xml  ros_node.py  setup.py
depthai_hand_tracker/: HandTracker.py  HandTrackerEdge.py  demo.py  demo_bpf.py  mediapipe_utils.py  template_manager_script_bpf_duo.py  template_manager_script_bpf_solo.py  template_manager_script_duo.py  template_manager_script_solo.py
depthai_hand_tracker/custom_models/: generate_postproc_onnx.py  requirements.txt
depthai_hand_tracker/models/: gen_blob_shave.sh
launch/: depthai_hand_tracker.launch  depthai_hand_tracker.launch.py
scripts/: depthai_hand_tracker_ros.py
src/depthai_hand_tracker/: FPS.py  HandTracker.py  HandTrackerBpf.py  HandTrackerBpfEdge.py  HandTrackerRenderer.py  __init__.py
src/depthai_hand_tracker/custom_models/: README.md
