<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>depthai_hand_tracker</name>
  <version>0.0.0</version>
  <description>The depthai_hand_tracker ros wrapper package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <maintainer email="hirofumi01.watanabe@g.softbank.co.jp">WATANABE Hirofumi</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>rostest</build_depend> -->
  <!-- <test_depend>cube_gazebo</test_depend> -->
  <export/>
</package>
