<?xml version="1.0"?>
<package format="3">
  <name>depthai_hand_tracker</name>
  <version>0.0.0</version>
  <description>The depthai_hand_tracker ROS2 wrapper package</description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank corp.</maintainer>
  <maintainer email="hirofumi01.watanabe@g.softbank.co.jp">WATANABE Hirofumi</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>python3-pip</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
